// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should toggle off 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007aff",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    ]
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(0, 0, 0, 1)",
        }
      }
    >
      OwO
    </Text>
  </View>
</View>
`;

exports[`actions should toggle on 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007aff",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    ]
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 122, 255, 1)",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255, 255, 255, 1)",
        }
      }
    >
      OwO
    </Text>
  </View>
</View>
`;

exports[`rendering initially off 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007aff",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    ]
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(0, 0, 0, 1)",
        }
      }
    >
      OwO
    </Text>
  </View>
</View>
`;

exports[`rendering initially on 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007aff",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    ]
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 122, 255, 1)",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(255, 255, 255, 1)",
        }
      }
    >
      OwO
    </Text>
  </View>
</View>
`;

exports[`rendering should render the title 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007aff",
      },
      Object {
        "alignItems": "center",
        "borderRadius": 24,
        "height": 48,
        "justifyContent": "center",
        "width": 48,
      },
    ]
  }
>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderRadius": 22,
        "height": 44,
        "justifyContent": "center",
        "width": 44,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(0, 0, 0, 1)",
        }
      }
    >
      OwO
    </Text>
  </View>
</View>
`;
